Cleaned up formatting on header and nav. Added hover on nav buttons and fixed spacing.

--- a/css/index.css
+++ b/css/index.css
@@ -147,7 +147,8 @@ h1 {
   font-size: 3rem;
 }
 h2 {
-  font-size: 1rem;
+  font-size: 1.5rem;
+  line-height: 1.4;
 }
 h4 {
   font-size: 2rem;
@@ -164,12 +165,6 @@ a {
   color: black;
   text-decoration: none;
   font-size: 1.5rem;
-}
-a:visited {
-  color: grey;
-}
-a:hover {
-  background-color: grey;
 }
 body {
   background-color: aliceblue;
@@ -201,6 +196,7 @@ header {
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  text-align: center;
   width: 75%;
   border-left: 4px double rgba(255, 0, 0, 0.3);
   border-right: 1px solid rgba(100, 100, 255, 0.3);
@@ -223,14 +219,22 @@ header {
   width: 12.5%;
   display: flex;
   text-align: center;
-}
-nav {
-  margin-top: 5%;
-  width: 100%;
-  height: 100%;
-  display: flex;
   justify-content: space-around;
+  align-items: center;
   flex-direction: column;
+  padding-top: 1%;
+}
+.navButton {
+  padding: 6%;
+  width: 80%;
+  height: 25%;
+  border-radius: 5px;
+}
+a.navButton:visited {
+  color: grey;
+}
+a.navButton:hover {
+  background-color: lightsteelblue;
 }
 #bodyContainer {
   display: flex;
@@ -246,13 +250,13 @@ nav {
   text-indent: 5%;
 }
 .info {
-  margin-top: 3%;
+  margin-top: 2%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 .info section {
-  margin-top: 4.5%;
+  margin-top: 2.5%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
