--- a/less/global.less
+++ b/less/global.less
@@ -20,8 +20,8 @@ h1 {
 }
 
 h2 {
-  font-size: 1rem;
-  
+  font-size: 1.5rem;
+  line-height: 1.4;
 }
 
 h4 {
@@ -46,13 +46,7 @@ a {
   font-size:1.5rem;
 }
 
-a:visited {
-  color:grey;
-}
 
-a:hover {
-  background-color: grey;
-}
 
 body {
   background-color: aliceblue;
@@ -88,6 +82,7 @@ header {
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  text-align: center;
   .paperEdgeLines();
 }
 
