--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,14 +16,14 @@
 }
 
 .info {
-  margin-top:3%;
+  margin-top:2%;
   display:flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .info section {
-  margin-top:4.5%;
+  margin-top:2.5%;
   display:flex;
   flex-wrap: wrap;
   justify-content: space-between;
