--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,14 +1,33 @@
 #nav {
     width:12.5%;
     display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 1%;
 }
 
-nav {
-    margin-top:5%;
-    width: 100%;
-    height: 100%;
-    display:flex;
-    justify-content: space-around;
-    flex-direction: column;
+// nav {
+//     margin-top:5%;
+//     width: 100%;
+//     height: 100%;
+//     display:flex;
+    
+// }
+
+.navButton {
+    padding: 6%;
+    width:80%;
+    height:25%;
+    border-radius: 5px;
+}
+
+a.navButton:visited {
+  color:grey;
+}
+
+a.navButton:hover {
+  background-color: lightsteelblue;
 }
